Add virtual Animals!

--- a/WorldPlusPlus/WorldPlusPlus.vcxproj
+++ b/WorldPlusPlus/WorldPlusPlus.vcxproj
@@ -151,9 +151,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Animal.h" />
+    <ClInclude Include="Cats.h" />
+    <ClInclude Include="ClassTalk.h" />
+    <ClInclude Include="Dogs.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Animal.cpp" />
+    <ClCompile Include="Cats.cpp" />
+    <ClCompile Include="ClassTalk.cpp" />
+    <ClCompile Include="Dogs.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
