--- a/WorldPlusPlus/WorldPlusPlus.vcxproj
+++ b/WorldPlusPlus/WorldPlusPlus.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -152,6 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Animal.h" />
+    <ClInclude Include="Army.h" />
     <ClInclude Include="Cats.h" />
     <ClInclude Include="ClassTalk.h" />
     <ClInclude Include="Dogs.h" />
@@ -159,6 +160,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Animal.cpp" />
+    <ClCompile Include="Army.cpp" />
     <ClCompile Include="Cats.cpp" />
     <ClCompile Include="ClassTalk.cpp" />
     <ClCompile Include="Dogs.cpp" />
